<resources>
    <string name="app_name">BackgroundSubtraction</string>
    <string name="menu_next_camera">Next cam</string>
    <string name="menu_image_size">Size</string>
    <string name="load_video">Load video</string>
    <string name="open_camera">Open camera</string>
    <string name="bs">BS</string>
    <string name="frame_differencing">Frame differencing</string>
    <string name="average">Average</string>
    <string name="mog2">MOG2</string>
    <string name="knn">KNN</string>
    <string name="none">None</string>
</resources>
